--- a/api/.env.example
+++ b/api/.env.example
@@ -1,6 +1,11 @@
 HOST=0.0.0.0
 PORT=1337
-APP_KEYS="toBeModified1,toBeModified2"
-API_TOKEN_SALT=tobemodified
-ADMIN_JWT_SECRET=tobemodified
-JWT_SECRET=tobemodified
+APP_KEYS="b9d6b6485f7c48fdb7a2b8d6a4c9d8ef,b7e3c4f7892d4710b9d2c8e7f6a4d9b0"
+API_TOKEN_SALT=2f9e1c78b3a245d7a9e6d4c8f5b7a9d3
+ADMIN_JWT_SECRET=6e9f1b4d2a8c4730a9d5f7b3e2c6d9f1
+TRANSFER_TOKEN_SALT=d8b4a7e2c5f9a1c3d9e8b7f6a4c9e1d7
+JWT_SECRET=a9d3b6f1e2c8d4a9f7b3e9c5d1a6e8f4
+
+CLOUDINARY_NAME = ds05t0bd0
+CLOUDINARY_KEY = 763961537585924
+CLOUDINARY_SECRET = Re8IST4AjmTm8zLpJwGbK8VFXcs
